--- a/src/main/frontend/src/styles/Cities.css
+++ b/src/main/frontend/src/styles/Cities.css
@@ -3,7 +3,7 @@
     text-align: center;
     margin-bottom: 50px;
   }
-  
+
   #places {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -12,7 +12,7 @@
     text-align: center;
     list-style: none;
   }
-  
+
   .hot-place {
     display: flex;
     background-color: white;
@@ -28,18 +28,26 @@
     transform: translate(20%, 20%) scale(1.25);
   }
 
-  
+
   .hot-place img {
     width: 300px;
     height: 300px;
     object-fit: cover;
   }
-  
+
+
+
   .place-content {
     padding: 25px;
   }
-  
-  .place-contenct h2 {
-    margin: 0;
-  }
-  
+
+.place-content a {
+  margin: 0;
+  font-size: 1.5rem;
+  font-family: sans-serif;
+  text-decoration: none;
+  color: black;
+}
+.place-content a:hover {
+  color: #3969ba;
+}
