--- a/src/main/frontend/src/styles/Cities.css
+++ b/src/main/frontend/src/styles/Cities.css
@@ -1,4 +1,8 @@
 
+div {
+  font-family: sans-serif;
+}
+
 #cities-info {
     text-align: center;
     margin-bottom: 50px;
@@ -25,7 +29,7 @@
   }
   .hot-place:hover {
       box-shadow: 10px 10px 4px rgba(0, 0, 0, 0.2);
-    transform: translate(20%, 20%) scale(1.25);
+    transform: translate(0, 20%) scale(1.1);
   }
 
 
@@ -50,4 +54,32 @@
 }
 .place-content a:hover {
   color: #3969ba;
+}
+
+.like-container {
+  float: right;
+}
+
+.like-container p {
+  text-align: center;
+}
+
+#buttons button {
+  margin-right: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+  background-color: white;
+  color: black;
+}
+
+#buttons button:hover {
+  background-color: #3969ba;
+}
+
+#buttons a {
+  text-decoration: none;
+  color: black;
 }
